# riscv-gnu-toolchain

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  LICENSE  Makefile  Makefile.in  README  README.md  README.release.md  com.c  com.h  configure  configure.ac  cons.c  console.c  console.h  csr.h  debug.sh  defs.h  demo.elf  halt.c  halt.h  intr.c  intr.h  kernel.elf  kernel.ld  macos-build.md  macos.zsh  main.c  make-picolibc-cross  mp1.s  qemu.patch  serial.c  serial.h  skyline.h  start.s  string.c  string.h  test.c  (+5 more)
binutils/gdb/testsuite/: .gitignore  ChangeLog-1993-2013  ChangeLog-2014-2021  Makefile.in  README  aclocal.m4  analyze-racy-logs.py  configure  configure.ac  make-check-all.sh  print-ts.py
binutils/gdbserver/: .gitattributes  .gitignore  ChangeLog-2002-2021  Makefile.in  README  acinclude.m4  aclocal.m4  ax-result-types.def  ax.cc  ax.h  config.in  configure  configure.ac  configure.srv  debug.cc  debug.h  dll.cc  dll.h  fork-child.cc  gdb_proc_service.h  gdbreplay.cc  gdbthread.h  hostio.cc  hostio.h  i387-fp.cc  i387-fp.h  inferiors.cc  inferiors.h  linux-aarch32-low.cc  linux-aarch32-low.h  linux-aarch32-tdesc.cc  linux-aarch32-tdesc.h  linux-aarch64-ipa.cc  linux-aarch64-low.cc  linux-aarch64-tdesc.cc  linux-aarch64-tdesc.h  linux-amd64-ipa.cc  linux-arc-low.cc  linux-arm-low.cc  linux-arm-tdesc.cc  (+59 more)
binutils/gdbsupport/: ChangeLog-2020-2021  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  agent.cc  agent.h  alt-stack.h  array-view.h  ax.def  block-signals.h  break-common.h  btrace-common.cc  btrace-common.h  buildargv.h  byte-vector.h  check-defines.el  cleanups.cc  cleanups.h  common-debug.cc  common-debug.h  common-defs.h  common-exceptions.cc  common-exceptions.h  common-gdbthread.h  common-inferior.cc  common-inferior.h  common-regcache.cc  common-regcache.h  common-types.h  common-utils.cc  common-utils.h  common.m4  compiler-type.m4  config.in  configure  configure.ac  create-version.sh  def-vector.h  (+114 more)
binutils/gnulib/: ChangeLog  Makefile.am  Makefile.gnulib.inc.in  Makefile.in  README  aclocal.m4  config.in  configure  configure.ac  update-gnulib.sh
binutils/gnulib/doc/: gendocs_template_min
binutils/gnulib/import/: Makefile.am  Makefile.in  chown.c  fchown-stub.c  ffs.c  fpucw.h  frexp.c  frexpl.c  getlogin_r.c  glob-libc.h  glob.c  glob.in.h  glob_internal.h  glob_pattern_p.c  globfree.c  isnan.c  isnand-nolibm.h  isnand.c  isnanl-nolibm.h  isnanl.c  math.c  math.in.h  mkdtemp.c  setenv.c  strstr.c  unsetenv.c  wchar.in.h
binutils/gnulib/patches/: 0001-use-windows-stat  0002-no-solaris-_gl_attribute_dealloc
binutils/ld/: ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.in  configure  configure.ac  configure.host  configure.tgt  deffile.h  deffilep.y  gen-doc.texi  genscripts.sh  h8-doc.texi  ld.h  ld.texi  ldbuildid.c  ldbuildid.h  ldcref.c  ldctor.c  ldctor.h  ldelf.c  ldelf.h  ldelfgen.c  ldelfgen.h  ldemul.c  ldemul.h  ldexp.c  ldexp.h  ldfile.c  ldfile.h  ldgram.y  ldint.texi  ldlang.c  ldlang.h  ldlex-wrapper.c  ldlex.h  (+28 more)
binutils/ld/emulparams/: README  avrxmega2.sh  avrxmega2_flmap.sh  avrxmega4.sh  avrxmega4_flmap.sh  elf32_x86_64.sh  elf32kvx.sh  elf32lriscv-defs.sh  elf32lriscv.sh  elf64_s390.sh  elf64kvx.sh  elf64kvx_linux.sh  elf64lriscv-defs.sh  elf64lriscv.sh  elf_i386.sh  elf_s390.sh  elf_x86_64.sh  x86-64-plt.sh
binutils/ld/emultempl/: README  aarch64elf.em  aix.em  alphaelf.em  arclinux.em  armelf.em  avrelf.em  beos.em  bfin.em  cr16elf.em  crxelf.em  cskyelf.em  elf-generic.em  elf-x86.em  elf.em  epiphanyelf_4x4.em  genelf.em  generic.em  hppaelf.em  ia64elf.em  irix.em  kvxelf.em  loongarchelf.em  m68hc1xelf.em  m68kelf.em  metagelf.em  mipself.em  mmix-elfnmmo.em  mmixelf.em  mmo.em  msp430.em  nds32elf.em  needrelax.em  netbsd.em  nios2elf.em  nto.em  pdp11.em  pe.em  pep.em  ppc32elf.em  (+19 more)
binutils/ld/po/: BLD-POTFILES.in  Make-in  fr.po  ka.po  ld.pot  ro.po  uk.po
binutils/ld/scripttempl/: DWARF.sc  README  aix.sc  alpha.sc  alphavms.sc  aout.sc  arclinux.sc  avr.sc  crisaout.sc  dlx.sc  elf.sc  elf32cr16.sc  elf32crx.sc  elf32msp430.sc  elf64bpf.sc  elf64hppa.sc  elf_chaos.sc  elfarc.sc  elfarcv2.sc  elfd10v.sc  elfd30v.sc  elfm68hc11.sc  elfm68hc12.sc  elfm9s12z.sc  elfmicroblaze.sc  elfxgate.sc  elfxtensa.sc  epiphany_4x4.sc  hppaelf.sc  i386beos.sc  i386go32.sc  i386msdos.sc  ia64vms.sc  ip2k.sc  iq2000.sc  mcorepe.sc  mep.sc  mips.sc  mipsbsd.sc  misc-sections.sc  (+18 more)
binutils/readline/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
binutils/readline/readline/: .gitignore  ChangeLog.gdb  Makefile.in  bind.c  callback.c  colors.c  complete.c  configure  configure.ac  display.c  funmap.c  histexpand.c  input.c  isearch.c  kill.c  mbutil.c  misc.c  readline.c  readline.h  rlmbutil.h  rlprivate.h  rltty.c  search.c  signals.c  terminal.c  text.c  util.c  vi_mode.c
binutils/sim/: .gitignore  ChangeLog-2021  MAINTAINERS  Makefile.am  Makefile.in  README-HACKING  aclocal.m4  config.h.in  configure  configure.ac  gdbinit.in
binutils/sim/aarch64/: ChangeLog-2021  aarch64-sim.h  cpustate.c  cpustate.h  decode.h  interp.c  local.mk  memory.c  memory.h  sim-main.h  simulator.c  simulator.h
binutils/sim/arm/: ChangeLog-2021  arm-sim.h  armcopro.c  armdefs.h  armemu.c  armemu.h  armemu32.c  armfpe.h  arminit.c  armos.c  armos.h  armsupp.c  armvirt.c  dbg_rdi.h  iwmmxt.c  iwmmxt.h  local.mk  maverick.c  maverick.h  sim-main.h  thumbemu.c  wrapper.c
binutils/sim/avr/: ChangeLog-2021  avr-sim.h  interp.c  local.mk  sim-main.h
binutils/sim/bfin/: ChangeLog-2021  arch.h  bfin-sim.c  bfin-sim.h  devices.c  devices.h  dv-bfin_cec.c  dv-bfin_cec.h  dv-bfin_ctimer.c  dv-bfin_ctimer.h  dv-bfin_dma.c  dv-bfin_dma.h  dv-bfin_dmac.c  dv-bfin_dmac.h  dv-bfin_ebiu_amc.c  dv-bfin_ebiu_amc.h  dv-bfin_ebiu_ddrc.c  dv-bfin_ebiu_ddrc.h  dv-bfin_ebiu_sdc.c  dv-bfin_ebiu_sdc.h  dv-bfin_emac.c  dv-bfin_emac.h  dv-bfin_eppi.c  dv-bfin_eppi.h  dv-bfin_evt.c  dv-bfin_evt.h  dv-bfin_gpio.c  dv-bfin_gpio.h  dv-bfin_gpio2.c  dv-bfin_gpio2.h  dv-bfin_gptimer.c  (+48 more)
(+14462 files in other folders)
